@@ -20,10 +20,12 @@ switch ($modx->event->name) {
             }
         }
         break;
+
     case 'OnWebPagePrerender':
-        if ($pdoTools = $this->modx->getParser()->pdoTools) {
-            foreach ($pdoTools->ignores as $key => $val) {
-                $this->modx->resource->_output = str_replace($key, $val, $this->modx->resource->_output);
+        $parser = $modx->getParser();
+        if ($parser instanceof pdoParser) {
+            foreach ($parser->pdoTools->ignores as $key => $val) {
+                $modx->resource->_output = str_replace($key, $val, $modx->resource->_output);
             }
         }
         break;
