@@ -2,6 +2,7 @@ Changelog for pdoTools.
 
 2.10.4 pl
 ==============
+- [Fenom] Do not output raw tags if there was a compile errors.
 - [#266] [pdoMenu] Fixed the setting of "here" and "self" classes.
 - [#261] [Fenom] Fixed unexpected behavior of the fenom tag "ignore".
 
